More Responsive fixes (#2984)
* address uneven column widths @ 1280x

* minor update

* pr feedback

--- a/src/assets/styles/_responsive.less
+++ b/src/assets/styles/_responsive.less
@@ -74,3 +74,6 @@
 @breakpoint-mobile-smaller-height: ~"all and (max-height: @{step-3-4})";
 // Mobile (up-to-step-4)
 @breakpoint-mobile-extra-small-height: ~"all and (max-height: @{step-4})";
+
+// TODO remove when side nav is removed
+@breakpoint-temp: ~"(min-width: 1281px) and (max-width: 1420px)";
