--- a/src/modules/common-elements/switch-labels-group.styles.less
+++ b/src/modules/common-elements/switch-labels-group.styles.less
@@ -49,6 +49,12 @@
     }
   }
 
+  // TODO: Circle back and remove this when SIDE NAV is removed
+  // Temporary quick fix for sizing issues between 1281 - 1420
+  @media @breakpoint-temp {
+    .mono-9;
+  }
+
   @media @breakpoint-mobile-mid {
     flex: 1;
     padding-bottom: @size-18;
